--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,9 +4,9 @@
  *
  */
 
-*,
-*::before,
-*::after {
+ *,
+ *::before,
+ *::after {
   box-sizing: border-box;
 }
 html,
@@ -44,8 +44,8 @@ p {
  *
  */
 
-.page-enter-active, .page-leave-active
-{
+ .page-enter-active, .page-leave-active
+ {
   transition: opacity .5s
 }
 .page-enter, .page-leave-active
@@ -58,7 +58,7 @@ p {
  * Utils
  *
  */
-.utils-overlay::before {
+ .utils-overlay::before {
   content: '';
   top: 0;
   left: 0;
@@ -107,7 +107,7 @@ p {
  *
  */
 
-.Wrapper {
+ .Wrapper {
   max-width: 100%;
   margin: 60px auto;
 }
@@ -147,7 +147,7 @@ p {
   width: 100vw;
   height: 100vh;
   transform: none;
-}*/
+  }*/
 /**
  *
  * Header
@@ -205,12 +205,63 @@ p {
 
 /**
  *
+ * Errors
+ *
+ */
+
+ .Errors_container {
+  position: absolute;
+  top: 80px;
+  right: 20px;
+  width: 400px;
+}
+.Error {
+  background-color: #d25a5a;
+  padding: 10px 30px 10px 20px;
+  color: #fff;
+  border-radius: 4px;
+  position: relative;
+  margin-bottom: 20px;
+}
+.Error__message {
+  font-size: 12px;
+}
+
+
+
+/**
+
+  TODO:
+  - Modifier la classe Error__close-btn
+  - Utiliser la classe close dans le système d'erreur
+  - Replacer la classe close plus haut dans le css
+
+ */
+
+.Error__close-btn {
+  cursor: pointer;
+  font-size: 8px;
+  color: #fff;
+  transform: rotate(45deg);
+  position: absolute;
+  top: 12px;
+  right: 12px;
+}
+.close-btn {
+  cursor: pointer;
+  font-size: 8px;
+  color: #fff;
+  transform: rotate(45deg);
+}
+
+/**
+ *
  * Menu
  *
  */
 
 
-.Menu {
+ .Menu {
   position: absolute;
   right: 5px;
   top: 100%;
@@ -307,7 +358,7 @@ p {
  *
  */
 
-.Form__entry {
+ .Form__entry {
   margin-bottom: 20px;
 }
 .Form__row {
@@ -363,7 +414,7 @@ p {
  */
 
 
-.Register {
+ .Register {
   width: 960px
 }
 
@@ -373,7 +424,7 @@ p {
  *
  */
 
-.Login {
+ .Login {
   width: 400px;
   max-width: 100%;
   padding: 20px;
@@ -383,7 +434,7 @@ p {
   box-shadow: 0px 0px 12px rgba(52,52,52,0.1);
 }
 .Login__header {
-/*border-bottom 1px solid #e4e4e4*/
+  /*border-bottom 1px solid #e4e4e4*/
   padding: 20px 0;
   margin-top: 40px;
   position: relative;
@@ -420,3 +471,177 @@ p {
 .Login__lost:hover {
   border-bottom: 1px dashed;
 }
+
+
+
+/**
+ *
+ * Profile Page
+ *
+ */
+
+ .Profile {
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+}
+.Profile__chat {
+  width: 100px;
+  border-right: 1px solid #e4e4e4;
+  height: 100vh;
+  transition: width 0.3s;
+}
+.Profile__chat--is-extended {
+  width: 300px;
+}
+.Profile__infos {
+  flex: 1;
+}
+.Profile__cover {
+  width: 100%;
+  height: 400px;
+  display: flex;
+  align-items: center;
+  padding: 0 80px;
+}
+.Profile__user {
+  display: flex;
+}
+.Profile__thumbnail {
+  width: 180px;
+  height: 180px;
+  background-color: #efefef;
+  border-radius: 6px;
+  overflow: hidden;
+  position: relative;
+}
+.Profile__thumbnail img {
+  width: 100%;
+  height: auto;
+}
+.Thumbnail__add {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  cursor: pointer;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.2s;
+  background: rgba(252,252,252,0.9);
+}
+.Thumbnail__add:after {
+  position: absolute;
+  content: '+';
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #999;
+  font-weight: bolder;
+  font-size: 48px;
+}
+.Profile__thumbnail:hover .Thumbnail__add,
+.Thumbnail__add--is-visible {
+  visibility: visible;
+  opacity: 1;
+}
+.Profile__identity {
+  margin-left: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.Profile__name {
+  font-family: 'Helvetica Neue';
+  font-size: 48px;
+  color: #666;
+}
+.Name__first {
+  font-weight: 200;
+  margin-right: 10px;
+}
+.Name__last {
+  font-weight: normal;
+}
+.Profile__others {
+  display: flex;
+}
+.Others__entry {
+  text-align: center;
+  flex: 1;
+  color: #666;
+  position: relative;
+}
+.Others__entry:hover .Others__tooltip {
+  opacity: 1;
+  visibility: visible;
+}
+.Others__icon {
+  font-size: 28px;
+  margin-bottom: 20px;
+}
+.Others__value {
+  font-size: 14px;
+  font-weight: 600;
+}
+.Others__tooltip {
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
+  background-color: #343434;
+  color: #fff;
+  position: absolute;
+  bottom: -40px;
+  padding: 5px 10px;
+  font-size: 10px;
+  font-weight: 200;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 4px;
+}
+.Profile__misc {
+  border-top: 1px solid #e4e4e4;
+  margin: 0 80px;
+}
+
+.Section__header {
+  font-size: 28px;
+  color: #666;
+  margin: 40px
+}
+
+.Section__body {
+  background-color: #fafafa;
+  border-radius: 4px;
+  padding: 20px
+}
+
+
+/**
+ *
+ * Tags
+ *
+ */
+
+
+.Tag {
+  position: relative;
+  background-color: #f1c40f;
+  display: inline-block;
+  padding: 8px 12px;
+  border-radius: 6px; 
+  margin-right: 10px;
+}
+
+.Tag__content {
+  color: #fff;
+  vertical-align: middle;
+}
+
+.Tag__close {
+  color: #fff;
+  font-size: 10px;
+  vertical-align: middle;
+}
+
