--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -64,8 +64,8 @@ p {
   left: 0;
   right: 0;
   bottom: 0;
-  position: absolute;
-  background-color: rgba(52, 52, 52, 0.4);
+  position: fixed;
+  background-color: rgba(22, 22, 22, 0.8);
   z-index: 3;
 }
 .utils-clearfix::after {
@@ -135,19 +135,6 @@ p {
   opacity: 1;
   visibility: visible;
 }
-/*Overlay*/
-/*.Modal::before {
-  content: '';
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color:rgba(52, 52, 52, 0.4);
-  width: 100vw;
-  height: 100vh;
-  transform: none;
-  }*/
 /**
  *
  * Header
@@ -168,7 +155,7 @@ p {
 }
 .Header__item {
   float: left;
-  height: 100%;
+  height: 60px;
   border-right: 1px solid #e4e4e4;
   color: #929292;
   box-shadow: 0 0 0px rgba(52,52,52,0);
@@ -236,23 +223,23 @@ p {
   - Utiliser la classe close dans le système d'erreur
   - Replacer la classe close plus haut dans le css
 
- */
+  */
 
-.Error__close-btn {
-  cursor: pointer;
-  font-size: 8px;
-  color: #fff;
-  transform: rotate(45deg);
-  position: absolute;
-  top: 12px;
-  right: 12px;
-}
-.close-btn {
-  cursor: pointer;
-  font-size: 8px;
-  color: #fff;
-  transform: rotate(45deg);
-}
+  .Error__close-btn {
+    cursor: pointer;
+    font-size: 8px;
+    color: #fff;
+    transform: rotate(45deg);
+    position: absolute;
+    top: 12px;
+    right: 12px;
+  }
+  .close-btn {
+    cursor: pointer;
+    font-size: 8px;
+    color: #fff;
+    transform: rotate(45deg);
+  }
 
 /**
  *
@@ -514,108 +501,118 @@ p {
   border-radius: 6px;
   overflow: hidden;
   position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-.Profile__thumbnail img {
+/*.Profile__thumbnail img {
   width: 100%;
   height: auto;
-}
-.Thumbnail__add {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  cursor: pointer;
-  opacity: 0;
-  visibility: hidden;
-  transition: all 0.2s;
-  background: rgba(252,252,252,0.9);
-}
-.Thumbnail__add:after {
-  position: absolute;
-  content: '+';
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #999;
-  font-weight: bolder;
-  font-size: 48px;
-}
-.Profile__thumbnail:hover .Thumbnail__add,
-.Thumbnail__add--is-visible {
-  visibility: visible;
-  opacity: 1;
-}
-.Profile__identity {
-  margin-left: 40px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.Profile__name {
-  font-family: 'Helvetica Neue';
-  font-size: 48px;
-  color: #666;
-}
-.Name__first {
-  font-weight: 200;
-  margin-right: 10px;
-}
-.Name__last {
-  font-weight: normal;
-}
-.Profile__others {
-  display: flex;
-}
-.Others__entry {
-  text-align: center;
-  flex: 1;
-  color: #666;
-  position: relative;
-}
-.Others__entry:hover .Others__tooltip {
-  opacity: 1;
-  visibility: visible;
-}
-.Others__icon {
-  font-size: 28px;
-  margin-bottom: 20px;
-}
-.Others__value {
-  font-size: 14px;
-  font-weight: 600;
-}
-.Others__tooltip {
-  opacity: 0;
-  visibility: hidden;
-  transition: all 0.3s;
-  background-color: #343434;
-  color: #fff;
-  position: absolute;
-  bottom: -40px;
-  padding: 5px 10px;
-  font-size: 10px;
-  font-weight: 200;
-  left: 50%;
-  transform: translateX(-50%);
-  border-radius: 4px;
-}
-.Profile__misc {
-  border-top: 1px solid #e4e4e4;
-  margin: 0 80px;
-}
+  }*/
+  .Thumbnail__add {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    cursor: pointer;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.2s;
+    background: rgba(252,252,252,0.9);
+  }
+  .Thumbnail__add:after {
+    position: absolute;
+    content: '+';
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #999;
+    font-weight: bolder;
+    font-size: 48px;
+  }
+  .Modal--default {
+    width: 600px;
+    max-width: 100%;
+    padding: 20px;
+    border: 1px solid #e4e4e4;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0px 0px 12px rgba(52,52,52,0.1);
+  }
+  .Profile__thumbnail:hover .Thumbnail__add,
+  .Thumbnail__add--is-visible {
+    visibility: visible;
+    opacity: 1;
+  }
+  .Profile__identity {
+    margin-left: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .Profile__name {
+    font-family: 'Helvetica Neue';
+    font-size: 48px;
+    color: #666;
+  }
+  .Name__first {
+    font-weight: 200;
+    margin-right: 10px;
+  }
+  .Name__last {
+    font-weight: normal;
+  }
+  .Profile__others {
+    display: flex;
+  }
+  .Others__entry {
+    text-align: center;
+    flex: 1;
+    color: #666;
+    position: relative;
+  }
+  .Others__entry:hover .Others__tooltip {
+    opacity: 1;
+    visibility: visible;
+  }
+  .Others__icon {
+    font-size: 28px;
+    margin-bottom: 20px;
+  }
+  .Others__value {
+    font-size: 14px;
+    font-weight: 600;
+  }
+  .Others__tooltip {
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s;
+    background-color: #343434;
+    color: #fff;
+    position: absolute;
+    bottom: -40px;
+    padding: 5px 10px;
+    font-size: 10px;
+    font-weight: 200;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 4px;
+  }
+  .Profile__misc {
+    border-top: 1px solid #e4e4e4;
+    margin: 0 80px;
+  }
 
-.Section__header {
-  font-size: 28px;
-  color: #666;
-  margin: 40px
-}
+  .Section__header {
+    font-size: 28px;
+    color: #666;
+    margin: 40px
+  }
 
-.Section__body {
-  background-color: #fafafa;
-  border-radius: 4px;
-  padding: 20px
-}
+  .Section__body {
+    border-radius: 4px;
+    padding: 20px 40px;
+  }
 
 
 /**
@@ -625,23 +622,109 @@ p {
  */
 
 
-.Tag {
+ .Tag {
   position: relative;
-  background-color: #f1c40f;
+  background-color: #f5f5f5;
+  color: #afafaf;
   display: inline-block;
   padding: 8px 12px;
   border-radius: 6px; 
   margin-right: 10px;
+  margin-bottom: 10px;
+  font-size: 12px;
 }
-
+.Tag__dropdown {
+  width: 300px;
+  background-color: #ffffff;
+  border: 1px solid #f2f2f2;
+  cursor: pointer;
+}
 .Tag__content {
-  color: #fff;
   vertical-align: middle;
 }
-
 .Tag__close {
-  color: #fff;
-  font-size: 10px;
   vertical-align: middle;
 }
+.Tag__icon {
+  font-size: 10px;
+}
 
+
+/**
+ *
+ * Profile modal : Photos
+ *
+ */
+
+ .Photos__grid {
+  overflow: hidden;
+}
+.Photos__item {
+  float: left;
+  width: calc(1/3 * 100% - 13.5px);
+  overflow: hidden;
+  margin: 10px;
+  /*border: 1px solid #efefef;*/
+  height: 0;
+  padding-bottom: calc(1/3 * 100% - 13.5px);
+  border-radius: 4px;
+  position: relative;
+}
+.Photos__item:nth-child(3n) {
+  margin-right: 0;
+}
+.Photos__item:nth-child(3n+1) {
+  margin-left: 0;
+}
+.Photos__item--selected {
+  border-color: #3399ff;
+}
+.Photos__item::after {
+  content: '';
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(52,52,52,0.4);
+  position: absolute;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+.Photos__item:hover::after {
+  opacity: 1;
+  visibility: visible;
+}
+.Photos__item:hover > img {
+  filter: blur(2px);
+  transition: filter 0.3s;
+}
+.Photos__item > img {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+/**
+ *
+ * Profile modal : Interests
+ *
+ */
+
+
+/**
+ *
+ * Select theme overwrite
+ *
+ */
+
+/*.select2-container--matcha .select2-dropdown {
+  border: 1px solid #fafafa;
+  box-shadow: 0px 0px 3px rgba(52, 52, 52, 0.2)
+}
+*/
