--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -258,6 +258,7 @@ p {
   background-color: #fff;
   box-shadow: 1px 2px 9px rgba(52,52,52,0.1);
   width: 300px;
+  z-index: 2;
 }
 .Menu, .Menu__arrow {
   opacity: 0;
@@ -490,10 +491,79 @@ p {
   display: flex;
   align-items: center;
   padding: 0 80px;
+  position: relative;
+}
+.Profile__actions {
+  position: absolute;
+  top: 45px;
+}
+.Profile__btn {
+  border-radius: 4px;
+  color: #fff;
+  font-size: 14px;
+  padding: 8px 16px;
+  font-weight: bold;
+  position: relative;
+  border: 1px solid transparent;
+  margin-right: 10px;
+  display: inline-block;
+  vertical-align: top;
+  zoom: 1; /* Fix for IE7 */
+  *display: inline; /* Fix for IE7 */
+}
+.Profile__btn--with-icon {
+  padding-right: 30px;
+}
+.Btn__icon {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-transition: transform .1s;
+     -moz-transition: transform .1s;
+      -ms-transition: transform .1s;
+       -o-transition: transform .1s;
+          transition: transform .1s;
+}
+.Btn__icon i {
+  vertical-align: middle;
+}
+.Profile__btn--like {
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#d32a2a+0,e53d2d+52,fc0043+100&1+0,1+52,0.97+100 */
+  background: -moz-linear-gradient(-45deg,  rgba(211,42,42,1) 0%, rgba(229,61,45,1) 52%, rgba(252,0,67,0.97) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(-45deg,  rgba(211,42,42,1) 0%,rgba(229,61,45,1) 52%,rgba(252,0,67,0.97) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(135deg,  rgba(211,42,42,1) 0%,rgba(229,61,45,1) 52%,rgba(252,0,67,0.97) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d32a2a', endColorstr='#f7fc0043',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+.Profile__btn:hover .Btn__icon{
+  -webkit-transform: translateY(-50%) scale(1.2);
+  -moz-transform: translateY(-50%) scale(1.2);
+  -ms-transform: translateY(-50%) scale(1.2);
+  -o-transform: translateY(-50%) scale(1.2);
+  transform: translateY(-50%) scale(1.2);
+}
+.Profile__btn--chat {
+  color: #999;
+  border-color: #f5f5f5;
+}
+.Profile__btn--is-disabled {
+  
 }
 .Profile__user {
   display: flex;
 }
+/* TEST */
+.Profile__user--is-online::after {
+  content: 'en ligne'
+}
+.Profile__user--is-offline::after {
+  content: 'hors ligne';
+}
+/********/
 .Profile__thumbnail {
   width: 180px;
   height: 180px;
@@ -571,7 +641,7 @@ p {
     color: #666;
     position: relative;
   }
-  .Others__entry:hover .Others__tooltip {
+  .Tooltip__toggle:hover .Tooltip {
     opacity: 1;
     visibility: visible;
   }
@@ -583,7 +653,7 @@ p {
     font-size: 14px;
     font-weight: 600;
   }
-  .Others__tooltip {
+  .Tooltip {
     opacity: 0;
     visibility: hidden;
     transition: all 0.3s;
@@ -597,6 +667,9 @@ p {
     left: 50%;
     transform: translateX(-50%);
     border-radius: 4px;
+    overflow: hidden;
+    white-space: nowrap;
+    z-index: 4;
   }
   .Profile__misc {
     border-top: 1px solid #e4e4e4;
@@ -728,3 +801,10 @@ p {
   box-shadow: 0px 0px 3px rgba(52, 52, 52, 0.2)
 }
 */
+
+
+/**
+ *
+ * Loader
+ *
+ */
