--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,7 @@
 	<link rel='stylesheet' href='/stylesheets/style.css' />
 	<script src="/javascripts/jquery.js"></script>
 	<script src="/javascripts/errors.js"></script>
+	<script src="/socket.io/socket.io.js"></script>
 	<!-- <script src="https://use.fontawesome.com/ff9422ad62.js"></script> -->
 	<link rel="stylesheet" type="text/css" href="/fontawesome/css/font-awesome.min.css">
 </head>
