--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -59,6 +59,11 @@
 			</div>
 		</form>
 	</div>
+	<a href="#" class="Modal__toggle " data-modal="ProfileModal">LOLL</a>
+	<div class="Modal ProfileModal Modal--default utils-abs-centered">
+		
+		bjr
+	</div>
 	<!-- <div class='User__interests Modal Modal--default utils-abs-centered'>
 		<select class='Interests__dropdown' multiple="multiple" disabled="true">
 			<option value="AL">Alabama</option>
