--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-		</section>
+
 		<% if (locals.user) { %>
 		<div class="Chat__container">
 			<ul class="Messages__wrapper">
@@ -6,41 +6,17 @@
 			<form class="Chat__zone">
 				<input type="hidden" name="username" id="chatHelper__username" value="<%= user.username %>">
 				<input type="hidden" name="chat" value="" id="chatHelper__id">
-				<input type="text" name="content" class="Chat__input">
-				<input type="submit" name="soin">
+				<input type="text" name="content" placeholder="Entrez un message ..." class="Chat__input">
+				<button type="submit" class="Chat__submit" name="soin">
+					<i class="fa fa-paper-plane" aria-hidden="true"></i>
+				</button>
 			</div>
 		</div>
 		<script src="/javascripts/notifications.js"></script>
 		<script>
 			var socket = io()
-			<% if (locals.user) { %>
 			var me = <%- JSON.stringify(user.username) -%>;
-			<% } %>
 			socket.emit('init', <%- JSON.stringify(user.username) -%>)
-
-			$.ajax({
-				url: 'https://localhost:3001/api/users/' + <%- JSON.stringify(user.username) -%> + '/conversations',
-				type: 'GET',
-				success: function (data) {
-					var fakeChatContainer = $('<div></div>');
-					var chatContainer = $('.Profile__chat');
-					console.log('ajax chat');
-					console.log(data);
-					for (var i = data.length - 1; i >= 0; i--) {
-						fakeChatContainer.append(createChatEntry(data[i]))
-					}
-					chatContainer.removeClass('Loading').append(fakeChatContainer.children())
-				}
-			})
-			var createChatEntry = function(data) {
-				return (" \
-					<div class='Chat__Item' data-chatid='" + data.id + "' data-chatwith='" + data.users[1 - data.users.indexOf(<%- JSON.stringify(user.username) -%>)]+ "'>\
-						<a href='#' class='Chat__toggle'>\
-							<span>" + data.users[1 - data.users.indexOf(<%- JSON.stringify(user.username) -%>)] + "</span>\
-						</a>\
-					</div>\
-					")
-			}
 		</script>
 		<% } %>
 		<script src="/javascripts/main.js"></script>
